# Crypto-Trader

./: .env  Cargo.toml  README.md  historical_prices.csv
crypto-trader/: Cargo.toml
src/: main.rs
