[package]
name = "crypto-trader"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive", "env"] }
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
csv = "1.3.0"
teloxide = { version = "0.12.0", features = ["macros"] }
log = "0.4.21"
env_logger = "0.11.3"
chrono = "0.4.38"